--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1197,6 +1197,10 @@ video {
   pointer-events: none;
 }
 
+.pointer-events-auto {
+  pointer-events: auto;
+}
+
 .fixed {
   position: fixed;
 }
@@ -1512,6 +1516,10 @@ video {
 
 .flex-none {
   flex: none;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .translate-x-\[-50\%\] {
