--- a/index.njk
+++ b/index.njk
@@ -36,39 +36,39 @@ layout: layouts/base.njk
     </ul>
   </div>
 
-  <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 overflow-auto flex items-center justify-center gsap-footer">
-    <div class="flex items-center rounded-md bg-[#535353] shadow-lg overflow-auto">
-      <ul class="flex items-center whitespace-nowrap pl-5 overflow-auto">
+  <div class="fixed z-[60] bottom-0 mb-4 md:mb-8 px-4 w-full flex items-center justify-center pointer-events-none gsap-footer">
+    <div class="flex items-center rounded-md bg-[#535353] shadow-lg overflow-auto pointer-events-auto">
+      <ul class="flex flex-1 items-center whitespace-nowrap pl-5 overflow-auto">
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">All</a>
+          <a href="#" class="h-[42px] pr-6 flex items-center font-medium text-sm text-white hover:text-white/80 duration-200">All</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Product</a>
+          <a href="#" class="h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Product</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">UI/UX</a>
+          <a href="#" class="h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">UI/UX</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Identity</a>
+          <a href="#" class="h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Identity</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
+          <a href="#" class="h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Development</a>
         </li>
         <li class="flex items-center">
-          <a href="#" class="h-[48px] md:h-[42px] pr-5 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
+          <a href="#" class="h-[42px] pr-5 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200">Art Direction</a>
         </li>
       </ul>
       <div class="flex-none w-px h-6 bg-white/40 dark:bg-black/20">
 
       </div>
-      <ul class="flex sm:hidden items-center px-2">
+      <ul class="flex flex-none sm:hidden items-center px-2">
         <li class="flex items-center">
-          <a href="#" @click="gridCols = 1" :class="gridCols == 1 ? 'text-white hover:text-white/80 dark:text-black dark:hover:text-black/80' : 'text-white/30 dark:text-black/20'" class="h-[48px] md:h-[42px] px-2 flex items-center font-medium text-sm duration-200">
+          <a href="#" @click="gridCols = 1" :class="gridCols == 1 ? 'text-white hover:text-white/80 dark:text-black dark:hover:text-black/80' : 'text-white/30 dark:text-black/20'" class="h-[42px] px-2 flex items-center font-medium text-sm duration-200">
             <svg class="fill-current w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 32H448V480H0V32z"/></svg>
           </a>
         </li>
         <li class="flex items-center">
-          <a href="#" @click="gridCols = 2" :class="gridCols == 2 ? 'text-white hover:text-white/80 dark:text-black dark:hover:text-black/80' : 'text-white/30 dark:text-black/20'" class="h-[48px] md:h-[42px] px-2 flex items-center font-medium text-sm duration-200">
+          <a href="#" @click="gridCols = 2" :class="gridCols == 2 ? 'text-white hover:text-white/80 dark:text-black dark:hover:text-black/80' : 'text-white/30 dark:text-black/20'" class="h-[42px] px-2 flex items-center font-medium text-sm duration-200">
             <svg class="fill-current w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M192 32H0V224H192V32zm0 256H0V480H192V288zM256 32V224H448V32H256zM448 288H256V480H448V288z"/></svg>
           </a>
         </li>
