--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -49,30 +49,24 @@ layout: layouts/base.njk
 
   <section class="gsap-content">
 
-    <div class="px-5 sm:px-8 mt-[120px] mb-[36px]">
-      <h2 class="text-4xl font-medium text-black/70">Redesigning a brand <br>new Nike store</h2>
-    </div>
-
-    <div class="px-5 sm:px-8 w-full max-w-[680px] mb-[140px]">
-      <div>
-        <p class="text-black/50 dark:text-white/50 text-base font-medium leading-snug mb-6 last:mb-0">
-          Aliquam tristique purus non magna condimentum consequat. In quam neque, lobortis nec tortor nec, tempus finibus justo. Duis dignissim ultricies elit aliquam mattis. Morbi sit amet massa magna. Phasellus finibus velit sit amet est condimentum auctor. In non blandit tellus. Etiam mattis dignissim purus, sed pulvinar nibh vehicula vitae. Vestibulum mattis consectetur vehicula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec ullamcorper pretium tempor.
-        </p>
-        <p class="text-black/50 dark:text-white/50 text-base font-medium leading-snug mb-6 last:mb-0">
-          Sed hendrerit purus eros, eget viverra nibh congue sed.
-          Nunc in arcu gravida, euismod urna at, ultricies nulla. Pellentesque nibh odio, consectetur ut urna maximus, euismod aliquam nibh. Cras feugiat non ipsum sit amet ultricies. Integer luctus, massa id maximus egestas, lacus turpis consectetur purus, vitae semper velit tellus vitae justo. Phasellus interdum eu arcu et feugiat.
-        </p>
+    <div class="flex items-end h-[80vh] mb-[48px]">
+      <div class="px-5 sm:px-8 w-full max-w-[680px]">
+        <div>
+          <p class="text-black/50 dark:text-white/50 text-base font-medium leading-snug mb-6 last:mb-0">
+            Aliquam tristique purus non magna condimentum consequat. In quam neque, lobortis nec tortor nec, tempus finibus justo. Duis dignissim ultricies elit aliquam mattis. Morbi sit amet massa magna. Phasellus finibus velit sit amet est condimentum auctor. In non blandit tellus. Etiam mattis dignissim purus, sed pulvinar nibh vehicula vitae. Vestibulum mattis consectetur vehicula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec ullamcorper pretium tempor.
+          </p>
+        </div>
+        <ul class="grid grid-cols-2 max-w-[384px] mt-8">
+          <li>
+            <div class="text-sm font-medium text-black/50 dark:text-white/50">Publish Year</div>
+            <div class="text-lg font-medium text-black/80 dark:text-white/80">2022</div>
+          </li>
+          <li>
+            <div class="text-sm font-medium text-black/50 dark:text-white/50">Project Categpru</div>
+            <div class="text-lg font-medium text-black/80 dark:text-white/80">Branding<div>
+          </li>
+        </ul>
       </div>
-      <ul class="flex flex-col sm:flex-row gap-6 sm:gap-20 mt-14">
-        <li>
-          <div class="text-sm font-medium text-black/50 dark:text-white/50">Publish Year</div>
-          <div class="text-lg font-medium text-black/80 dark:text-white/80">2022</div>
-        </li>
-        <li>
-          <div class="text-sm font-medium text-black/50 dark:text-white/50">Project Categpru</div>
-          <div class="text-lg font-medium text-black/80 dark:text-white/80">Branding<div>
-        </li>
-      </ul>
     </div>
 
     <div class="w-full">
