--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1386,6 +1386,14 @@ video {
   margin-top: 1.25rem;
 }
 
+.mb-\[48px\] {
+  margin-bottom: 48px;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .flex {
   display: flex;
 }
@@ -1436,6 +1444,10 @@ video {
 
 .h-\[48px\] {
   height: 48px;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
 }
 
 .w-14 {
@@ -1514,6 +1526,14 @@ video {
   max-width: 680px;
 }
 
+.max-w-\[384px\] {
+  max-width: 384px;
+}
+
+.max-w-\[448px\] {
+  max-width: 448px;
+}
+
 .flex-none {
   flex: none;
 }
@@ -1541,6 +1561,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
