--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1458,6 +1458,10 @@ video {
   height: 70vh;
 }
 
+.h-\[200px\] {
+  height: 200px;
+}
+
 .w-14 {
   width: 3.5rem;
 }
@@ -1565,6 +1569,10 @@ video {
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .flex-col {
