--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -3,38 +3,7 @@ title: Sample
 layout: layouts/base.njk
 ---
 
-
-
-<main data-barba="container" data-barba-namespace="page">
-  <h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-40 font-medium text-base leading-none text-black/70 dark:text-white/80 gsap-header">
-    © Through All Seasons
-  </h1>
-
-  <div class="fixed top-0 right-0 mt-5 mr-5 sm:mt-8 sm:mr-8 z-40 gsap-header">
-    <ul class="flex items-center gap-5">
-      <li class="flex items-center">
-        <a href="#" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">About</a>
-      </li>
-      <li class="hidden lg:flex items-center">
-        <a href="#" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Github</a>
-      </li>
-      <li class="hidden lg:flex items-center">
-        <a href="#" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">CV</a>
-      </li>
-      
-      {# <li class="flex lg:hidden items-center">
-        <a href="#" class="flex items-center font-medium text-sm text-black/80 hover:text-black/80 duration-200">
-          Published
-          <svg class="fill-current w-3 h-3 ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.3.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M320 240L160 384 0 240l0-48 320 0 0 48z"/></svg>
-        </a>
-      </li> #}
-      <li class="flex items-center lg:ml-1">
-        <button @click="toggleDarkMode()" class="w-4 h-4 rounded-full overflow-hidden border border-black dark:border-white">
-          <div class="w-[8px] h-4 bg-black dark:bg-white"></div>
-        </button>
-      </li>
-    </ul>
-  </div>
+<main data-barba="container" data-barba-namespace="work">
 
   <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 w-full md:w-auto flex items-center justify-center gsap-footer">
     <a href="/" class="relative flex items-center justify-center flex-none w-14 h-14 text-white">
@@ -46,30 +15,36 @@ layout: layouts/base.njk
     </a>
   </div>
 
-
   <section class="gsap-content">
 
-    <div class="flex items-end h-[75vh] mb-[48px]">
-      <div class="px-5 sm:px-8 w-full max-w-[680px]">
-        <div>
-          <p class="text-black/50 dark:text-white/50 text-base font-medium leading-snug mb-6 last:mb-0">
-            Aliquam tristique purus non magna condimentum consequat. In quam neque, lobortis nec tortor nec, tempus finibus justo. Duis dignissim ultricies elit aliquam mattis. Morbi sit amet massa magna. Phasellus finibus velit sit amet est condimentum auctor. In non blandit tellus. Etiam mattis dignissim purus, sed pulvinar nibh vehicula vitae. Vestibulum mattis consectetur vehicula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec ullamcorper pretium tempor.
-          </p>
-        </div>
-        <ul class="grid grid-cols-2 max-w-[384px] mt-8">
-          <li>
-            <div class="text-sm font-medium text-black/50 dark:text-white/50">Publish Year</div>
-            <div class="text-lg font-medium text-black/80 dark:text-white/80">2022</div>
-          </li>
-          <li>
-            <div class="text-sm font-medium text-black/50 dark:text-white/50">Project Categpru</div>
-            <div class="text-lg font-medium text-black/80 dark:text-white/80">Branding<div>
-          </li>
-        </ul>
+
+    {# Circle #}
+    <div class="sticky top-0 z-10 flex items-center justify-center h-[550px] xl:h-[600px] 2xl:h-[800px] gsap-hero">
+      <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden gsap-circle">
+        <div class="bg-red-500 w-[100%] h-[100%] rounded-full"></div>
+        <img src="https://mir-s3-cdn-cf.behance.net/projects/max_808_webp/2aa67f161689621.Y3JvcCwxMDAxLDc4Myw5Niww.jpg" class="absolute top-0 left-0 mt-[5%] ml-[10%] max-w-none w-[150%] h-[150%] gsap-circle-card">
       </div>
     </div>
 
-    <div class="w-full">
+
+    <div class="relative z-20 w-full bg-white dark:bg-[#181818]">
+      <div class="grid grid-cols-1 md:grid-cols-2 px-5 md:px-8 py-8">
+        <h3 class="mb-8 md:mb-0 w-full max-w-[576px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-regular leading-snug 2xl:leading-[1.40]">
+          <span class="text-black dark:text-white">Through All Seasons (2023)</span> – is a first-of-its-kind live and on-demand content platform with a focus on high-quality original series, live events, and experiences for business audiences. We worked side-by-side with our partners at Salesforce, fielding a cross-discipline team to envision, design, and launch.
+        </h3>
+        <div class="md:flex justify-end items-center">
+          <ul class="grid grid-cols-2 md:gap-20">
+            <li>
+              <div class="text-xl font-medium text-black/80 dark:text-white/80">65</div>
+              <div class="text-sm font-medium text-black/50 dark:text-white/50">Projects Published</div>
+            </li>
+            <li>
+              <div class="text-xl font-medium text-black/80 dark:text-white/80">4k+</div>
+              <div class="text-sm font-medium text-black/50 dark:text-white/50">Code Contriutions</div>
+            </li>
+          </ul>
+        </div>
+      </div>
       <div class="grid grid-cols-2 gap-1">
         <div>
           <img src="https://cdn.dribbble.com/userupload/4797787/file/original-dd855009ad53809455f97f6558cc6de0.jpg?compress=1&resize=1504x838" class="w-full aspect-[4/3] object-cover">
@@ -82,11 +57,8 @@ layout: layouts/base.njk
           <img src="https://cdn.dribbble.com/userupload/4606338/file/original-951c8a79bcf94bc90de579d733add00d.png?compress=1&resize=1504x846" class="w-full aspect-[4/3] object-cover">
         </div>
       </div>
-
-      
-
-
     </div>
-  </section
-  
+  </section>
+
+
 </main>
