--- a/index.njk
+++ b/index.njk
@@ -75,8 +75,7 @@ layout: layouts/base.njk
   
   <section class="gsap-content">
     {# Circle #}
-    <div class="sticky top-0 z-10 flex items-center justify-center h-[550px] xl:h-[600px] 2xl:h-[800px]">
-      {# <div class="mt-[12vw] sm:mt-0"></div> #}
+    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[600px] 2xl:h-[800px] mt-[12vw] sm:mt-0">
       <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0 dark:from-white/20 dark:to-white/0"></div>
     </div>
 
