--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -1,17 +1,17 @@
-<h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-40 font-medium text-base leading-none text-black/70 dark:text-white/80 gsap-header">
+<h1 class="fixed top-0 left-0 mt-5 ml-5 sm:mt-8 sm:ml-8 z-40 font-medium text-base leading-none text-white mix-blend-difference gsap-header">
   © Selected Works by Jin <span class="hidden md:inline">Su Park</span>
 </h1>
 
-<div class="fixed top-0 right-0 mt-5 mr-5 sm:mt-8 sm:mr-8 z-40 gsap-header">
+<div class="fixed top-0 right-0 mt-5 mr-5 sm:mt-8 sm:mr-8 z-40 mix-blend-difference gsap-header">
   <ul class="flex items-center gap-5">
     <li class="flex items-center">
-      <a href="/about" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">About</a>
+      <a href="/about" class="font-medium text-[15px] text-white/40 hover:text-white/80 duration-200">About</a>
     </li>
     <li class="hidden lg:flex items-center">
-      <a href="https://github.com/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">Github</a>
+      <a href="https://github.com/jinsupark" target="_blank" class="font-medium text-[15px] text-white/40 hover:text-white/80 duration-200">Github</a>
     </li>
     <li class="hidden lg:flex items-center">
-      <a href="https://read.cv/jinsupark" target="_blank" class="font-medium text-[15px] text-black/40 hover:text-black/80 dark:text-white/40 dark:hover:text-white/80 duration-200">CV</a>
+      <a href="https://read.cv/jinsupark" target="_blank" class="font-medium text-[15px] text-white/40 hover:text-white/80 duration-200">CV</a>
     </li>
     
     {# <li class="flex lg:hidden items-center">
@@ -21,8 +21,8 @@
       </a>
     </li> #}
     <li class="flex items-center lg:ml-1">
-      <button @click="toggleDarkMode()" class="w-4 h-4 rounded-full overflow-hidden border border-black dark:border-white">
-        <div class="w-[8px] h-4 bg-black dark:bg-white"></div>
+      <button @click="toggleDarkMode()" class="w-4 h-4 rounded-full overflow-hidden border border-white">
+        <div class="w-[8px] h-4 bg-white"></div>
       </button>
     </li>
   </ul>
