--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -19,7 +19,7 @@ layout: layouts/base.njk
 
 
     {# Circle #}
-    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[600px] 2xl:h-[800px] mt-[12vw] sm:mt-0 gsap-hero">
+    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[550px] 2xl:h-[800px] mt-[12vw] sm:mt-0 gsap-hero">
       <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden gsap-circle">
         <div class="bg-red-500 w-[100%] h-[100%] rounded-full"></div>
         <img src="https://mir-s3-cdn-cf.behance.net/projects/max_808_webp/2aa67f161689621.Y3JvcCwxMDAxLDc4Myw5Niww.jpg" class="absolute top-0 left-0 mt-[5%] ml-[10%] max-w-none w-[150%] h-[150%] gsap-circle-card">
@@ -28,19 +28,19 @@ layout: layouts/base.njk
 
 
     <div class="relative z-20 w-full bg-white dark:bg-[#181818]">
-      <div class="grid grid-cols-1 md:grid-cols-2 px-5 md:px-8 py-8">
-        <h3 class="mb-8 md:mb-0 w-full max-w-[576px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-regular leading-snug 2xl:leading-[1.40]">
+      <div class="grid grid-cols-1 md:grid-cols-2 px-5 md:px-8 py-7">
+        <h3 class="mb-8 md:mb-0 w-full max-w-[576px] 2xl:max-w-[640px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-regular leading-snug 2xl:leading-[1.40]">
           <span class="text-black dark:text-white">Through All Seasons (2023)</span> – is a first-of-its-kind live and on-demand content platform with a focus on high-quality original series, live events, and experiences for business audiences. We worked side-by-side with our partners at Salesforce, fielding a cross-discipline team to envision, design, and launch.
         </h3>
         <div class="md:flex justify-end items-center">
           <ul class="grid grid-cols-2 md:gap-20">
             <li>
-              <div class="text-xl font-medium text-black/80 dark:text-white/80">65</div>
               <div class="text-sm font-medium text-black/50 dark:text-white/50">Projects Published</div>
+              <div class="text-lg font-medium text-black/80 dark:text-white/80">2008</div>
             </li>
             <li>
-              <div class="text-xl font-medium text-black/80 dark:text-white/80">4k+</div>
               <div class="text-sm font-medium text-black/50 dark:text-white/50">Code Contriutions</div>
+              <div class="text-lg font-medium text-black/80 dark:text-white/80">Branding, Art Direction</div>
             </li>
           </ul>
         </div>
