--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -56,7 +56,7 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
 
-    <script defer src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+    {# <script defer src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script> #}
 
   </head>
   <body 
