--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -19,7 +19,7 @@ layout: layouts/base.njk
 
 
     {# Circle #}
-    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[550px] 2xl:h-[800px] mt-[12vw] sm:mt-0 gsap-hero">
+    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[550px] 2xl:h-[800px] pt-[12vw] sm:pt-0 gsap-hero">
       <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden gsap-circle">
         <div class="bg-red-500 w-[100%] h-[100%] rounded-full"></div>
         <img src="https://mir-s3-cdn-cf.behance.net/projects/max_808_webp/2aa67f161689621.Y3JvcCwxMDAxLDc4Myw5Niww.jpg" class="absolute top-0 left-0 mt-[5%] ml-[10%] max-w-none w-[150%] h-[150%] gsap-circle-card">
@@ -35,12 +35,12 @@ layout: layouts/base.njk
         <div class="md:flex justify-end items-center">
           <ul class="grid grid-cols-2 md:gap-20">
             <li>
-              <div class="text-sm font-medium text-black/50 dark:text-white/50">Projects Published</div>
+              <div class="text-sm font-medium text-black/50 dark:text-white/50">Publish Date</div>
               <div class="text-lg font-medium text-black/80 dark:text-white/80">2008</div>
             </li>
             <li>
-              <div class="text-sm font-medium text-black/50 dark:text-white/50">Code Contriutions</div>
-              <div class="text-lg font-medium text-black/80 dark:text-white/80">Branding, Art Direction</div>
+              <div class="text-sm font-medium text-black/50 dark:text-white/50">Project Category</div>
+              <div class="text-lg font-medium text-black/80 dark:text-white/80">Branding</div>
             </li>
           </ul>
         </div>
@@ -51,6 +51,22 @@ layout: layouts/base.njk
         </div>
         <div>
           <img src="https://cdn.dribbble.com/userupload/4606557/file/original-ad83b97ed87fa135e039e4680755da2d.jpg?compress=1&resize=1504x1003" class="w-full aspect-[4/3] object-cover">
+        </div>
+
+        <div class="col-span-2">
+          <img src="https://cdn.dribbble.com/userupload/4606338/file/original-951c8a79bcf94bc90de579d733add00d.png?compress=1&resize=1504x846" class="w-full aspect-[4/3] object-cover">
+        </div>
+
+        <div class="col-span-2">
+          <img src="https://cdn.dribbble.com/userupload/4606338/file/original-951c8a79bcf94bc90de579d733add00d.png?compress=1&resize=1504x846" class="w-full aspect-[4/3] object-cover">
+        </div>
+
+        <div class="col-span-2">
+          <img src="https://cdn.dribbble.com/userupload/4606338/file/original-951c8a79bcf94bc90de579d733add00d.png?compress=1&resize=1504x846" class="w-full aspect-[4/3] object-cover">
+        </div>
+
+        <div class="col-span-2">
+          <img src="https://cdn.dribbble.com/userupload/4606338/file/original-951c8a79bcf94bc90de579d733add00d.png?compress=1&resize=1504x846" class="w-full aspect-[4/3] object-cover">
         </div>
 
         <div class="col-span-2">
