--- a/index.njk
+++ b/index.njk
@@ -5,7 +5,7 @@ layout: layouts/base.njk
 
 
 
-<main data-barba="container" data-barba-namespace="home">
+<main data-barba="container" data-barba-namespace="home" class="h-full">
   
   
   {# Category Selector #}
@@ -73,9 +73,9 @@ layout: layouts/base.njk
     </div>
   </div>
   
-  <section class="gsap-content">
+  <section class="h-full gsap-content">
     {# Circle #}
-    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[550px] 2xl:h-[800px] pt-[12vw] sm:pt-0">
+    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[550px] 2xl:h-[800px] pt-[12vw] sm:pt-0 gsap-hero">
       <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0 dark:from-white/20 dark:to-white/0 gsap-circle"></div>
     </div>
 
