--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-[#EDEDED] font-sans h-full">
+<html lang="en" class="bg-[#EDEDED] font-sans">
   <head>
     <title>{{ title }}</title>
 
@@ -60,7 +60,7 @@
 
   </head>
   <body 
-    class="antialiased text-slate-600 font-normal h-full"
+    class="antialiased text-slate-600 font-normal"
     data-barba="wrapper"
     x-data="main"
   >
