--- a/index.njk
+++ b/index.njk
@@ -5,7 +5,7 @@ layout: layouts/base.njk
 
 
 
-<main data-barba="container" data-barba-namespace="home" class="h-full">
+<main data-barba="container" data-barba-namespace="home" class="gsap-container h-screen overflow-hidden">
   
   
   {# Category Selector #}
@@ -73,16 +73,16 @@ layout: layouts/base.njk
     </div>
   </div>
   
-  <section class="h-full gsap-content">
+  <section class="gsap-content">
     {# Circle #}
-    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[550px] 2xl:h-[800px] pt-[12vw] sm:pt-0 gsap-hero">
+    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[550px] 2xl:h-[800px] gsap-hero">
       <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square mx-auto rounded-full bg-gradient-to-r from-white to-white/0 dark:from-white/20 dark:to-white/0 gsap-circle"></div>
     </div>
 
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="grid grid-cols-1 md:grid-cols-2 px-5 md:px-8 py-7">
-        <h3 class="mb-8 md:mb-0 w-full max-w-[512px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-regular leading-snug 2xl:leading-[1.40]">
-          Jin Su Park is a New York based, multi-disciplinary Product Designer and Developer. He elevates clarity and potential in products through human design, coherant dialogue, and incredible attention to detail.
+        <h3 class="mb-8 md:mb-0 w-full max-w-[540px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-medium leading-snug 2xl:leading-[1.40]">
+          Jin Su Park is multi-disciplinary Product Designer and Developer, currently living in New York. His work elevates clarity and potential through humane design, thoughtful dialogue, and incredible attention to detail.
         </h3>
         {# <h3 class="mb-8 md:mb-0 w-full max-w-[512px] text-black/50 dark:text-white/50 text-base font-regular leading-snug">
           Carl Beaverson is an award-winning Web Developer, currently living & working abroad. A partner at Groundcrew, his work is focused on creating bespoke, effective & engaging digital experiences.
