--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -3,7 +3,7 @@ title: Sample
 layout: layouts/base.njk
 ---
 
-<main data-barba="container" data-barba-namespace="work">
+<main data-barba="container" data-barba-namespace="work" class="gsap-container h-screen overflow-hidden">
 
   <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 w-full md:w-auto flex items-center justify-center gsap-footer">
     <a href="/" class="relative flex items-center justify-center flex-none w-14 h-14 text-white">
@@ -28,22 +28,44 @@ layout: layouts/base.njk
 
 
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
-      <div class="grid grid-cols-1 md:grid-cols-2 px-5 md:px-8 py-7">
-        <h3 class="mb-8 md:mb-0 w-full max-w-[576px] 2xl:max-w-[640px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-regular leading-snug 2xl:leading-[1.40]">
-          <span class="text-black dark:text-white">Through All Seasons (2023)</span> – is a first-of-its-kind live and on-demand content platform with a focus on high-quality original series, live events, and experiences for business audiences. We worked side-by-side with our partners at Salesforce, fielding a cross-discipline team to envision, design, and launch.
-        </h3>
-        <div class="md:flex justify-end items-center">
-          <ul class="grid grid-cols-2 md:gap-20">
-            <li>
-              <div class="text-sm font-medium text-black/50 dark:text-white/50">Publish Date</div>
-              <div class="text-lg font-medium text-black/80 dark:text-white/80">2008</div>
-            </li>
-            <li>
-              <div class="text-sm font-medium text-black/50 dark:text-white/50">Project Category</div>
-              <div class="text-lg font-medium text-black/80 dark:text-white/80">Branding</div>
-            </li>
-          </ul>
+      <div class="flex px-5 md:px-8 py-7 gap-36">
+        <div>
+          <h3 class="mb-36 w-full max-w-[576px] 2xl:max-w-[640px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-medium leading-snug 2xl:leading-[1.40]">
+            <span class="text-black dark:text-white">Through All Seasons (2023)</span> – is a first-of-its-kind live and on-demand content platform with a focus on high-quality original series, live events, and experiences for business audiences. We worked side-by-side with our partners at Salesforce, fielding a cross-discipline team to envision, design, and launch.
+          </h3>
         </div>
+
+        <div class="grid grid-cols-2 pr-10 gap-20">
+          <div>
+            <h4 class="text-sm font-medium text-black/20 dark:text-white/20 mb-4">Applied Disciplines</h4>
+            <ul class="">
+              <li class="text-base font-medium text-black/50 dark:text-white/50">
+                Branding
+              </li>
+              <li class="text-base font-medium text-black/50 dark:text-white/50">
+                Art Direction
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h4 class="text-sm font-medium text-black/20 dark:text-white/20 mb-4">Technologies Used</h4>
+            <ul class="">
+              <li class="text-base font-medium text-black/50 dark:text-white/50">
+                Illustrator
+              </li>
+              <li class="text-base font-medium text-black/50 dark:text-white/50">
+                Photoshop
+              </li>
+              <li class="text-base font-medium text-black/50 dark:text-white/50">
+                Figma
+              </li>
+              <li class="text-base font-medium text-black/50 dark:text-white/50">
+                HTML
+              </li>
+            </ul>
+          </div>
+        </div>
+        
       </div>
       <div class="grid grid-cols-2 gap-1">
         <div>
