--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -28,14 +28,14 @@ layout: layouts/base.njk
 
 
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
-      <div class="flex px-5 md:px-8 py-7 gap-36">
+      <div class="flex flex-col lg:flex-row px-5 md:px-8 py-7 lg:gap-10 xl:gap-36">
         <div>
-          <h3 class="mb-36 w-full max-w-[576px] 2xl:max-w-[640px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-medium leading-snug 2xl:leading-[1.40]">
+          <h3 class="mb-10 lg:mb-36 w-full max-w-[576px] 2xl:max-w-[640px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-medium leading-snug 2xl:leading-[1.40]">
             <span class="text-black dark:text-white">Through All Seasons (2023)</span> – is a first-of-its-kind live and on-demand content platform with a focus on high-quality original series, live events, and experiences for business audiences. We worked side-by-side with our partners at Salesforce, fielding a cross-discipline team to envision, design, and launch.
           </h3>
         </div>
 
-        <div class="grid grid-cols-2 pr-10 gap-20">
+        <div class="grid grid-cols-2 xl:pr-10 gap-20">
           <div>
             <h4 class="text-sm font-medium text-black/20 dark:text-white/20 mb-4">Applied Disciplines</h4>
             <ul class="">
