--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -35,7 +35,7 @@ layout: layouts/base.njk
           </h3>
         </div>
 
-        <div class="grid grid-cols-2 xl:pr-10 gap-20">
+        <div class="grid grid-cols-2 xl:pr-10 lg:gap-20">
           <div>
             <h4 class="text-sm font-medium text-black/20 dark:text-white/20 mb-4">Applied Disciplines</h4>
             <ul class="">
