--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -15,11 +15,11 @@ layout: layouts/base.njk
     </a>
   </div>
 
-  <section class="gsap-content">
+  <section class="gsap-content" style="opacity: 0;">
 
 
     {# Circle #}
-    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[550px] 2xl:h-[800px] pt-[12vw] sm:pt-0 gsap-hero">
+    <div class="sticky top-0 z-10 flex items-center justify-center h-[100svh] pt-[12vw] sm:pt-0 gsap-hero">
       <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden gsap-circle">
         <div class="bg-red-500 w-[100%] h-[100%] rounded-full"></div>
         <img src="https://mir-s3-cdn-cf.behance.net/projects/max_808_webp/2aa67f161689621.Y3JvcCwxMDAxLDc4Myw5Niww.jpg" class="absolute top-0 left-0 mt-[5%] ml-[10%] max-w-none w-[150%] h-[150%] gsap-circle-card">
