--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -3,7 +3,7 @@ title: Sample
 layout: layouts/base.njk
 ---
 
-<main data-barba="container" data-barba-namespace="work" class="gsap-container h-screen overflow-hidden">
+<main data-barba="container" data-barba-namespace="work" class="gsap-container xh-screen xoverflow-hidden">
 
   <div class="fixed z-[60] left-1/2 translate-x-[-50%] bottom-0 mb-4 md:mb-8 px-4 w-full md:w-auto flex items-center justify-center gsap-footer">
     <a href="/" class="relative flex items-center justify-center flex-none w-14 h-14 text-white">
@@ -19,7 +19,7 @@ layout: layouts/base.njk
 
 
     {# Circle #}
-    <div class="sticky top-0 z-10 flex items-center justify-center h-[100svh] pt-[12vw] sm:pt-0 gsap-hero">
+    <div class="sticky top-0 z-10 flex items-center justify-center h-[450px] sm:h-[550px] xl:h-[550px] 2xl:h-[800px] pt-[12vw] sm:pt-0 gsap-hero">
       <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden gsap-circle">
         <div class="bg-red-500 w-[100%] h-[100%] rounded-full"></div>
         <img src="https://mir-s3-cdn-cf.behance.net/projects/max_808_webp/2aa67f161689621.Y3JvcCwxMDAxLDc4Myw5Niww.jpg" class="absolute top-0 left-0 mt-[5%] ml-[10%] max-w-none w-[150%] h-[150%] gsap-circle-card">
