--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -50,7 +50,7 @@
     ></script>
 
     <!-- Barba -->
-    <script src="https://unpkg.com/@barba/core"></script>
+    <script defer src="/assets/js/barba.js"></script>
 
     <!-- GSAP -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
