--- a/index.njk
+++ b/index.njk
@@ -82,7 +82,7 @@ layout: layouts/base.njk
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="grid grid-cols-1 md:grid-cols-2 px-5 md:px-8 py-7">
         <h3 class="mb-8 md:mb-0 w-full max-w-[540px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg font-medium leading-snug 2xl:leading-[1.40]">
-          Jin Su Park is multi-disciplinary Product Designer and Developer, currently living in New York. His work elevates clarity and potential through humane design, thoughtful dialogue, and incredible attention to detail.
+          Jin Su Park is multi-disciplinary Product Designer and Developer, currently living in New York. His work elevates brand clarity and product potential through thoughtful dialogue, and incredible attention to detail.
         </h3>
         {# <h3 class="mb-8 md:mb-0 w-full max-w-[512px] text-black/50 dark:text-white/50 text-base font-regular leading-snug">
           Carl Beaverson is an award-winning Web Developer, currently living & working abroad. A partner at Groundcrew, his work is focused on creating bespoke, effective & engaging digital experiences.
